--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ ordered-float = "3.7.0"
 try_from = "0.3.2"
 thrift = "0.17.0"
 clap = { version = "4.0", features = ["derive"] }
+thiserror = "1.0.44"
+console = "0.15.7"
+serde = { verion = "1.0.174", features = ["derive"] }
+serde_json = "1.0.103"
