--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ thiserror = "1.0.44"
 console = "0.15.7"
 serde = { verion = "1.0.174", features = ["derive"] }
 serde_json = "1.0.103"
+serde_yaml = "0.9.25"
