--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,8 @@ thiserror = "1.0.44"
 console = "0.15.7"
 serde = { verion = "1.0.174", features = ["derive"] }
 serde_json = "1.0.103"
-serde_yaml = "0.9.25"
+serde_yaml = { version = "0.9.25", optional = true }
+
+[features]
+default = ["yaml"]
+yaml = ["dep:serde_yaml"]
