grant write permissions to release action

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -72,6 +72,8 @@ jobs:
   release:
     needs: [publish]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Download binary artifacts
         id: download
