--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,9 @@ jobs:
           path: |
             target/aarch64-apple-darwin/release/nektar 
 
+
   publish:
+    if: false
     needs: [build-linux-x86_64, build-aarch64-darwin]
     runs-on: ubuntu-latest
     steps:
@@ -70,7 +72,8 @@ jobs:
           CRATES_TOKEN: ${{ secrets.CRATES_TOKEN }}
 
   release:
-    needs: [publish]
+    #needs: [publish]
+    needs: [build-linux-x86_64, build-aarch64-darwin]
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -81,9 +84,16 @@ jobs:
         with:
           path: artifacts 
       - name: Echo download path
-        run: echo ${{steps.download.outputs.download-path}}
+        run: ls -lahR ${{steps.download.outputs.download-path}}
+      - name: Prepare x86_64 artifact name
+        run: mv ${{steps.download.outputs.download-path}}/nektar-linux-x86_64/nektar nektar-linux-x86_64
+      - name: Prepare aarch64 artifact name
+        run: mv ${{steps.download.outputs.download-path}}/nektar-aarch64-apple-darwin/nektar nektar-aarch64-apple-darwin
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1 
         with:
-          files: |
-            artifacts/**/*
+          artifacts: >- 
+            nektar-linux-x86_64,
+            nektar-aarch64-apple-darwin
+          artifactErrorsFailBuild: true
+          allowUpdates: true
