--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,7 +53,6 @@ jobs:
 
 
   publish:
-    if: false
     needs: [build-linux-x86_64, build-aarch64-darwin]
     runs-on: ubuntu-latest
     steps:
@@ -72,8 +71,7 @@ jobs:
           CRATES_TOKEN: ${{ secrets.CRATES_TOKEN }}
 
   release:
-    #needs: [publish]
-    needs: [build-linux-x86_64, build-aarch64-darwin]
+    needs: [publish]
     runs-on: ubuntu-latest
     permissions:
       contents: write
