--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,10 @@ console = "0.15.7"
 serde = { version = "1.0.174", features = ["derive"] }
 serde_json = "1.0.103"
 serde_yaml = { version = "0.9.25", optional = true }
+assert_cmd = "2.0.12"
+
+[dev-dependencies]
+testcontainers = "0.14.0"
 
 [features]
 default = ["yaml"]
