--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ serde = { version = "1.0.174", features = ["derive"] }
 serde_json = "1.0.103"
 serde_yaml = { version = "0.9.25", optional = true }
 assert_cmd = "2.0.12"
+dialoguer = "0.11.0"
 
 [dev-dependencies]
 async_once = "0.2.6"
