--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,10 @@ dialoguer = "0.11.0"
 [dev-dependencies]
 async_once = "0.2.6"
 ctor = "0.2.5"
+env_logger = "0.10.0"
 lazy_static = "1.4.0"
 predicates = "3.0.4"
-testcontainers = "0.14.0"
+testcontainers = { version = "0.15.0", features = ["experimental"] }
 tokio = { version = "1.32.0", features = ["macros", "sync", "rt"] }
 
 [features]
