--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -103,6 +103,11 @@ jobs:
         run: mv ${{steps.download.outputs.download-path}}/nektar-linux-x86_64/nektar nektar-linux-x86_64
       - name: Prepare aarch64 artifact name
         run: mv ${{steps.download.outputs.download-path}}/nektar-aarch64-apple-darwin/nektar nektar-aarch64-apple-darwin
+      - name: Build Changelog
+        id: github_release
+        uses: mikepenz/release-changelog-builder-action@4.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Release
         uses: ncipollo/release-action@v1 
         with:
@@ -111,3 +116,4 @@ jobs:
             nektar-aarch64-apple-darwin
           artifactErrorsFailBuild: true
           allowUpdates: true
+          body: ${{steps.github_release.outputs.changelog}}
