replace toolchain-rs, fixes #6

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,9 +21,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install target
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
+        uses: dtolnay/rust-toolchain@stable 
       - name: Build
         run: cargo build --verbose --release
       - name: Await metastore container
@@ -48,10 +46,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Install aarch64 target
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable 
         with:
-          target: aarch64-apple-darwin
-          toolchain: stable
+          targets: aarch64-apple-darwin
       - name: Build
         run: cargo build --verbose --release --target=aarch64-apple-darwin
       - name: Archive binaries
